update, still not working

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <!-- meta tags and title -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Memory Card Game</title>
-
+   <div id="title">
+     <h1>
+      The Memory Card Game
+    </h1> 
+  </div>
   <!-- external and on-page CSS goes here -->
   <link rel="stylesheet" href="styles.css" media="all">
   <style>
