--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -6,11 +7,10 @@
   <!-- meta tags and title -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <div id="title">
-     <h1>
-      The Memory Card Game
-    </h1> 
+  <div id="title">
+     <h1> The Memory Card Game </h1> 
   </div>
+
   <!-- external and on-page CSS goes here -->
   <link rel="stylesheet" href="styles.css" media="all">
   <style>
@@ -18,139 +18,124 @@
   </style>
 
   <!-- external and on-page JavaScript goes here -->
-  <script type="text/javascript" src="scripts.js" defer></script>
+  <script type="text/javascript" src="script.js" defer></script>
   <script>
     // on-page JavaScript, if any, goes here
   </script>
 
-  <body>
+</head>
 
-    <div id="mainTable">
-
-
-      <div class="card pic1">
-        <div class="cardFront"></div>
-        <div class="cardBack"></div>
-      </div>
-
-      <div class="card pic2">
-        <div class="cardFront"></div>
-        <div class="cardBack"></div>
-      </div>
-
-      <div class="card pic3">
-        <div class="cardFront"></div>
-        <div class="cardBack"></div>
-      </div>
-
-      <div class="card pic1">
-        <div class="cardFront"></div>
-        <div class="cardBack"></div>
-      </div>
-
-      <div class="card pic8">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic10">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic2">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-      <div class="card pic8">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic6">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic3">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic4">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic7">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic4">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic5">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-      <div class="card pic6">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-      <div class="card pic9">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-      <div class="card pic10">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-      </div>
-
-
-      <div class="card pic5">
-        <div class="cardFront"> </div>
-        <div class="cardBack"> </div>
-
-
-        <div class="card pic7">
-          <div class="cardFront"> </div>
-          <div class="cardBack"> </div>
-
-          <div class="card pic9">
-            <div class="cardFront"> </div>
-            <div class="cardBack"> </div>
-
-          </div>
-
-        </div>
-
-  </body>
-
-  </div>
-
-
-  </div>
-  <!-- /mainTable -->
-
-
+<body>
 
   <!-- page HTML elements goes here for the initial DOM -->
 
-  </body>
+
+  <!-- /MainTable -->
+  <div id="mainTable">
+
+    <div class="card pic1">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic2">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic3">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic1">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic8">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic10">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic2">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic8">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic6">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic3">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic4">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic7">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic4">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic5">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic6">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic9">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic10">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic5">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic7">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+
+    <div class="card pic9">
+      <div class="cardFront"> </div>
+      <div class="cardBack"> </div>
+    </div>
+    
+
+  </div>
+
+</body>
 
 </html>
